--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
       </ul>
     </div>
   </nav>
+  <div class="hero-main">
+    <div class="hero-main-content1">
+      <span>This website is<br> awesome</span>
+      <p>This website has some subtext that goes
+        here under the<br> main title. It's a smaller font
+        and the color is lower<br>contrast
+      </p>
+      <button>Sign up</button>
+    </div>
+    <div class="hero-main-content2">
+      <span>this is a placeholder for an image</span>
+    </div>
+    
+
+  </div>
   
 </body>
 </html>
