--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>copy-page</title>
 </head>
 <body>
+
   <nav>
     <div class="navbar">
       <span>Header Logo</span>
@@ -17,6 +18,7 @@
       </ul>
     </div>
   </nav>
+
   <div class="hero-main">
     <div class="hero-main-content1">
       <span>This website is<br> awesome</span>
@@ -29,8 +31,13 @@
     <div class="hero-main-content2">
       <span>this is a placeholder for an image</span>
     </div>
-    
+  </div>
 
+  <div class="fourbox-content">
+    <div class="fourbox-content-box"><span>this is some subtext under an illustration or image</span></div>
+    <div class="fourbox-content-box"><span>this is some subtext under an illustration or image</span></div>
+    <div class="fourbox-content-box"><span>this is some subtext under an illustration or image</span></div>
+    <div class="fourbox-content-box"><span>this is some subtext under an illustration or image</span></div>
   </div>
   
 </body>
