--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
     <div class="fourbox-content-box"><span>this is some subtext under an illustration or image</span></div>
     <div class="fourbox-content-box"><span>this is some subtext under an illustration or image</span></div>
   </div>
+
+  <div class="quote-content">
+    <div class="quote-content-text">
+    <p><em>This is an insipiring quote, or a testimonial from a customer. 
+      Maybe it's just filling up space, or maybe people will actually
+      read it. Who knows? All i know that it looks nice.<br></em>
+      <span>-Thor, God of Thunder</span>
+    </p>
+  </div>
+  </div>
   
 </body>
 </html>
