created signup-content section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
     </p>
   </div>
   </div>
+
+  <div class="signup-content">
+    <div class="signup-content-box">
+      <p>
+        <span>Call to action! It's time!</span><br>
+        Sign up for our product by clicking that button right over there!
+      </p>
+      <button>Sign up</button>
+    </div>
+  </div>
   
 </body>
 </html>
